customized to Willy

--- a/src/app/work/projects/urchin.mdx
+++ b/src/app/work/projects/urchin.mdx
@@ -3,19 +3,26 @@ title: "Autonomous Underwater Depth-Sensing Robot - Urchin"
 publishedAt: "2025-04-01"
 summary: "Smartphone-controlled robot for cliff diving safety utilizing syringe-based buoyancy."
 images:
-  - "/images/projects/urchin/cover.jpg"
+  - "/images/projects/project-01/Urchin/IMG_4456.jpg"
+  - "/images/projects/project-01/Urchin/IMG_3931.mp4"
+  - "/images/projects/project-01/Urchin/IMG_4420.JPG"
+  - "/images/projects/project-01/Urchin/ME 153 WAAC_ Urchin Poster.pptx.png"
 ---
 
 ## Project Overview
-[cite_start]I designed and built a smartphone-controlled robot for cliff diving safety that collects real-time water depth, pressure, temperature, and photo data via Wi-Fi using a direct IP address connection[cite: 39, 40].
+
+This smartphone-controlled robot was designed and built for cliff diving safety, collecting real-time water depth, pressure, temperature, and photo data via Wi-Fi using a direct IP address connection.
 
 ## Technical Systems
 
 ### Buoyancy Engineering
-[cite_start]I engineered a syringe-based buoyancy system using 3D-printed parts, a DC gear motor with encoder, and a gear mechanism to enable smooth depth control of the robot[cite: 41].
+
+A syringe-based buoyancy system was engineered using 3D-printed parts, a DC gear motor with encoder, and a pinion-and-rack mechanism to enable precise depth control. The system operates by pulling water into the syringe to increase the robot's weight and sink, or pushing water out to reduce weight and float upward. The DC motor drives the pinion gear, which engages with a rack connected to the syringe plunger, providing smooth and controlled vertical movement through the water column.
 
 ### Waterproof Fabrication
-[cite_start]The waterproof, disassemblable casing was created by vacuum-forming PETG sheets around a PLA-printed mold[cite: 42]. [cite_start]I utilized O-rings, marine weld-level epoxy, and clamped two half-shells together using side fixtures[cite: 43].
+
+The waterproof, disassemblable casing was created by vacuum-forming PETG sheets around a PLA-printed mold. The design utilizes O-rings, marine weld-level epoxy, and side fixtures to clamp two half-shells together.
 
 ### Electronics & Integration
-[cite_start]The system integrates an ESP32 camera module, voltage regulator, barometric pressure sensor, Wi-Fi antenna, and a 4xAA battery pack into a compact, durable housing[cite: 45].
+
+The system integrates an ESP32 camera module, voltage regulator, barometric pressure sensor, Wi-Fi antenna, and a 4xAA battery pack into a compact, durable housing.
