--- a/src/app/work/projects/transformable-wheel-robot.mdx
+++ b/src/app/work/projects/transformable-wheel-robot.mdx
@@ -13,7 +13,7 @@ link: "https://openreview.net/forum?id=cguzT10d5i#discussion"
 
 This transformable-wheel robot was designed and built for dynamic, unstructured environments, capable of driving on smooth wheels and extending its legs to crawl over obstacles. The system uses reinforcement learning with proprioceptive sensing—motor velocity, body acceleration, and body orientation—to autonomously determine when to extend its legs for terrain adaptation.
 
-**Related Publication:** [Learning to extend legs of a transformable-wheel robot](https://openreview.net/forum?id=cguzT10d5i#discussion) - RSS 2025 Hardware Intelligence Workshop
+**Publication:** [Learning to extend legs of a transformable-wheel robot](https://openreview.net/forum?id=cguzT10d5i#discussion) - RSS 2025 Hardware Intelligence Workshop
 
 ## Technical Systems
 
